# ChatroomClient

./: CMakeLists.txt  README.md
config/: client_config.h
include/: AdminRole.h  FriendManager.h  GroupManager.h  MemberRole.h  MyInput.h  OwnerRole.h  RoleBase.h  TcpClient.h  UserManager.h
src/: FriendManager.cpp  GroupManager.cpp  MyInput.cpp  TcpClient.cpp  UserManager.cpp  main.cpp
